# p2p-filesharing

./: README.md  package-lock.json  package.json
custom_thread/: Cargo.toml
custom_thread/src/: lib.rs
images/: desktop.ini
src/: App.css  App.js  Context.js  FileAdd.js  FileTransfer.js  FileTransferComponent.js  RemoteFiles.js  SearchTab.js
src-tauri/: .taurignore  Cargo.toml  JOHnWicker720p.txt  tauri.conf.json
src-tauri/file_hash/: NVIDIA Made a CPU.. I’m Holding It..mp4.txt  SwarmNET.pdf.txt  The Future of Smartphones with Google’s CEO.mp4.txt  The.Super.Mario.Bros..Movie.2023.REPACK.1080p.WEBRip.x264.AAC5.1-[YTS.MX].mp4.txt  VIDEO_20180814_123915.mp4.txt  movie.mkv.txt
src-tauri/pieces/ac11b7eadb4bfaeee06ad06c5b6954f4f387e49a/: 0.txt  1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
src-tauri/src/: api_handlers.rs  hash_response.rs  main.rs  piece_request.rs  piece_response.rs  retransmission.rs  search.rs  swarmnet.rs
src-tauri/src/utilities/: availability.rs  file_handler.rs
swarmnet/: Cargo.toml
swarmnet/src/: hash_response.rs  main.rs  maino.rs  piece_request.rs  piece_response.rs  search.rs  swarmnet.rs
swarmnet/src/utilities/: availability.rs  file_handler.rs  mod.rs
