[lib]
name = "custom_thread"
path = "custom_thread/src/lib.rs"

[package]
name = "app"
version = "0.1.0"
build = "../src-tauri/src/build.rs"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.4", features = ["dialog-message", "dialog-open", "fs-create-dir", "fs-read-dir", "fs-write-file", "notification-all", "os-all", "path-all", "process-relaunch", "shell-open", "window-close", "window-maximize", "window-minimize", "window-set-decorations", "window-set-focus", "window-set-fullscreen", "window-set-size", "window-start-dragging", "window-unmaximize", "window-unminimize"] }
lazy_static = "1.4.0"
rpc = "0.0.1-dev.1"
format_serde_error = "0.3"
dirs = "5.0.1"
hex = "0.4.3"
rand = "0.8.5"
regex = "1.8.0"
sha1 = "0.10.5"
local-ip-address = "0.5.3"


[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]



